<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context="com.eyalengel.blurdemo.Fragments.MessagesFragment">

    <!--
        **** LinearLayout holds the TextView "buttons" on top of the page ****
    -->
    <LinearLayout
        android:id="@+id/scoreboard_buttons_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/scoreboard_layout"
        android:layout_alignLeft="@+id/scoreboard_layout"
        android:layout_alignRight="@+id/scoreboard_layout"
        android:layout_alignStart="@+id/scoreboard_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/scoreboard_buttons_border"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/scoreboard_today_pts_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@drawable/scoreboard_not_selected_button"
            android:gravity="center"
            android:text="@string/today_pts_btn_txt"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/buttons_gray"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/scoreboard_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@drawable/scoreboard_selected_button"
            android:gravity="center"
            android:text="@string/scoreboard_btn_txt"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/scoreboard_prizes_products_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@drawable/scoreboard_not_selected_button"
            android:gravity="center"
            android:text="@string/prizes_n_products_btn_txt"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/buttons_gray"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!--
        **** 3 RelativeLayouts for 3 different views, depending on which "button" was clicked ****
    -->

    <!-- *** Scoreboard View *** -->
    <RelativeLayout
        android:id="@+id/scoreboard_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scoreboard_buttons_layout">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/scoreboard_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingTop="20dp">

        </android.support.v7.widget.RecyclerView>

    </RelativeLayout>

    <!-- *** Today's Pts Summary View *** -->
    <RelativeLayout
        android:id="@+id/today_summary_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_below="@+id/scoreboard_buttons_layout"
        android:visibility="gone"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Today\'s pts Summary"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </RelativeLayout>


    <!-- *** Prizes and Products View *** -->
    <RelativeLayout
        android:id="@+id/prizes_products_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_below="@+id/scoreboard_buttons_layout"
        android:visibility="gone"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Prizes &amp; Products"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </RelativeLayout>

</RelativeLayout>