<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.eyalengel.blurdemo.Fragments.FeedFragment">

    <RelativeLayout
        android:id="@+id/feed_top_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@color/profile_bg_color">

        <TextView
            android:id="@+id/feed_icon_setting_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:text="@string/icon_settings"
            android:textColor="@color/feed_settings_icon_color"
            android:textSize="32sp" />

        <com.github.siyamed.shapeimageview.CircularImageView
            android:id="@+id/feed_circle_imageview"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="12dp"
            app:siBorderColor="@color/white"
            app:siBorderWidth="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/feed_circle_imageview"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center">

            <TextView
                android:id="@+id/feed_name_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:text="@string/default_feed_name"
                android:textColor="@color/black"
                android:textSize="20sp" />

                <TextView
                    android:id="@+id/left_quote_awesome_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/quote_edittext"
                    android:layout_toLeftOf="@+id/quote_edittext"
                    android:layout_toStartOf="@+id/quote_edittext"
                    android:text="@string/icon_quote_left"
                    android:textAlignment="center"
                    android:textColor="@color/feed_quote_icon_color"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/quote_edittext"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="6dp"
                    android:background="@android:color/transparent"
                    android:ellipsize="end"
                    android:focusable="false"
                    android:hint="@string/quote_hint"
                    android:layout_below="@+id/feed_name_textview"
                    android:layout_centerInParent="true"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingLeft="12dip"
                    android:paddingRight="12dip"
                    android:textAlignment="center"
                    android:gravity="start"
                    android:textColor="@color/feed_quote_text_color"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/right_quote_awesome_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/quote_edittext"
                    android:layout_toEndOf="@+id/quote_edittext"
                    android:layout_toRightOf="@+id/quote_edittext"
                    android:text="@string/icon_quote_right"
                    android:textAlignment="center"
                    android:textColor="@color/feed_quote_icon_color"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/white">

                <TableRow
                    android:id="@+id/table_row"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:weightSum="4">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/blur_orange"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/feed_pts_today"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="-2dp"
                            android:alpha="0.7"
                            android:paddingTop="6dp"
                            android:text="PTS TODAY"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="8sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/num_of_pts_today"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingBottom="4dp"
                            android:text="126"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_weight="1"
                        android:background="@color/blur_orange"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/feed_pts_this_week"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="-2dp"
                            android:alpha="0.7"
                            android:paddingTop="6dp"
                            android:text="PTS THIS WEEK"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="8sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/num_of_pts_this_week"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingBottom="4dp"
                            android:text="543"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_weight="1"
                        android:background="@color/blur_orange"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/feed_total_pts"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="-2dp"
                            android:alpha="0.7"
                            android:paddingTop="6dp"
                            android:text="TOTAL PTS"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="8sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/num_of_total_pts"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingBottom="4dp"
                            android:text="4.3K"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_weight="1"
                        android:background="@color/blur_orange"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/feed_rank"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="-2dp"
                            android:alpha="0.7"
                            android:paddingTop="6dp"
                            android:text="RANK"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="8sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/rank_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingBottom="4dp"
                            android:text="3"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </TableRow>
            </TableLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/feed_recycler_view_wrapper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <TextView
            android:id="@+id/feed_top_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@drawable/textview_top_bottom_borders"
            android:gravity="center_vertical"
            android:paddingBottom="8dp"
            android:paddingEnd="24dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingStart="24dp"
            android:paddingTop="8dp"
            android:text="January 1, 2016" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/feed_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/feed_top_date"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

        </android.support.v7.widget.RecyclerView>

    </RelativeLayout>


</LinearLayout>
